src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__compare_expr_eq_str.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let a = "a"
let b = "b"

a == b
}

OK
Bool(false)
