src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__compare_expr_lt.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let a = 0
let b = 1

a < b

OK
Bool(true)
