src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__external.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
import {foo_new, foo_value} from "test3"

let foo = foo_new(100)
print(foo_value(foo))
}

OK
Nil

STDOUT
100
