src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__fibonacci.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
fn fib(n) {
  if n<2 { n }
  else { fib(n-1)+fib(n-2) }
}

fib(10)
}

OK
Int(55)
