src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__field_set.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = {}
v.a = 100
v.a
}

OK
Int(100)
